<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.UsersListFragment">


    <EditText
        android:id="@+id/edit_text_name"
        style="@style/title"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_loupe"
        android:drawablePadding="12dp"
        android:hint="@string/input_hint"
        android:paddingHorizontal="14dp"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text" />
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@null"
        android:paddingEnd="28dp"
        android:textAllCaps="false"
        android:text="@string/cancel_btn"
        android:textColor="#6534FF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_name"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_name"
        app:layout_constraintStart_toEndOf="@id/edit_text_name"
        android:visibility="gone"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        style="@style/customTabLayout"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name"
        app:tabIndicatorColor="@color/purple_500"
        app:tabIndicatorHeight="3dp"
        app:tabMode="auto"
        app:tabTextColor="#97979B">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designers" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analysts" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/managers" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ios" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qa" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_office" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frontend" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hr" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pr" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backend" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support" />

    </com.google.android.material.tabs.TabLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#C3C3C6"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workers_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:paddingHorizontal="16dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        tools:listitem="@layout/users_list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>